# cudaDemo

./: .gitignore  CMakeLists.txt  README.md
include/: cuda.h
src/: cuda.cu  main.cpp
